# Exjobb-ESP32-S3-ETL-Benchmarks

./: README.md
Benchmarks/: CMakeLists.txt  ETL_0_TYPE_string-dasm.txt  README.md  TODO.md  _string_c_str_jumbo_constructor.txt  benchmark_results.json  sdkconfig
Benchmarks/disassembly/: ETL_1_TYPE_string-dasm.txt
Benchmarks/main/: Benchmarks.cpp  CMakeLists.txt  analyze.py  compare_json_analyze.py  compare_optimized.py  idf_component.yml  plot.py  plot_alt.py  plot_compare.py  test.py
Benchmarks/main/common/: common.hpp  old_macros.hpp
Benchmarks/main/deque/: deque.cpp  deque.hpp
Benchmarks/main/map/: map.cpp  map.hpp
Benchmarks/main/set/: set.cpp  set.hpp
Benchmarks/main/string/: string.cpp  string.hpp
Benchmarks/main/vector/: vector.cpp  vector.hpp
Benchmarks/results/: benchmark_comparison.json  benchmark_results-optimized.json  benchmark_results.json  etl_vs_stl_comparison.csv
heap_task_tracking/: README.md  TODO.md  sdkconfig  sdkconfig.old
heap_task_tracking/components/etl/: CMakeLists.txt
heap_task_tracking/main/: CMakeLists.txt  heap_task_tracking_main.cpp  plot.py  plot_alt.py  sensor.hpp  simulation.py
heap_task_tracking/results/: heap_data_USE_ETL=0_USE_STATIC=0-alternate.csv  heap_data_USE_ETL=0_USE_STATIC=0-vector-60min-noresize.csv  heap_data_USE_ETL=0_USE_STATIC=0.csv  heap_data_USE_ETL=0_USE_STATIC=1-alternate.csv  heap_data_USE_ETL=0_USE_STATIC=1-vector-60min-noresize.csv  heap_data_USE_ETL=0_USE_STATIC=1.csv  heap_data_USE_ETL=1_USE_STATIC=0-alternate.csv  heap_data_USE_ETL=1_USE_STATIC=0-vector-60min-noresize.csv  heap_data_USE_ETL=1_USE_STATIC=0.csv  heap_data_USE_ETL=1_USE_STATIC=1-alternate.csv  heap_data_USE_ETL=1_USE_STATIC=1-vector-60min-noresize.csv  heap_data_USE_ETL=1_USE_STATIC=1.csv  heap_events_USE_ETL=0_USE_STATIC=0.csv  heap_events_USE_ETL=0_USE_STATIC=1.csv  heap_events_USE_ETL=1_USE_STATIC=0.csv  heap_events_USE_ETL=1_USE_STATIC=1.csv
practice/: CMakeLists.txt  sdkconfig  sdkconfig.old
practice/main/: CMakeLists.txt  string.cpp
string/: sdkconfig
string/main/: CMakeLists.txt  string.cpp
